# pj64-parallelrdp

./: .gitmodules  CMakeLists.txt  README.md
configapp/: Kickstart.sln  Kickstart.vcxproj  Kickstart.vcxproj.filters
configapp/Source/: Kickstart.rc  KickstartResource.h  Main.cpp  Main.h
projects/: Makefile
src/: CMakeLists.txt  config.c  config.h  config_gui.c  config_gui.h  config_gui_resources.h  config_gui_resources.rc  gfx_1.3.c  gfx_1.3.h  gfx_m64p.h  git.h.in  gl_core_3_3.c  gl_core_3_3.h  glguts.c  glguts.h  ini.c  ini.h  parallel-rdp-standalone.cmake  parallel_imp.cpp  parallel_imp.h  wgl_ext.h
src/parallel-rdp/vulkan/: vulkan_headers.hpp
